<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/welcome_message"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/mainLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/mainSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/mainSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>